# fastapi-personal-finances

./: .env.dev.example  .gitignore  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
app/: main.py
app/api/: __init__.py
app/core/: config.py
app/db/: __init__.py  dependencies.py  manager.py
app/exceptions/: categories_exceptions.py  saving_goals_exceptions.py  spending_exceptions.py  transaction_exceptions.py  user.py
app/models/: __init__.py  base_categories_model.py  base_catetgories_model.py  base_model.py  base_transactions_model.py  income_model.py  refresh_token.py  saving_goals_model.py  spending_categories_model.py  spendings_model.py  user.py  users_income_categories_model.py  users_spending_categories_model.py
app/pages/: __init__.py  auth.py  income.py  saving_goals.py  spendings.py
app/repositories/: __init__.py  base.py  base_categories_repository.py  base_repository.py  base_transactions_repository.py  income_repository.py  refresh_token.py  saving_goals_repository.py  spending_categories_repository.py  spendings_repository.py  user.py  user_repository.py  users_income_categories_repository.py  users_spending_categories_repository.py
app/schemas/: common_schemas.py  date_range_schemas.py  pagination_schemas.py  saving_goals_schemas.py  spending_category_schemas.py  spendings_schemas.py  transaction_category_schemas.py  transactions_schemas.py  user_schemas.py  users_spending_categories_schema.py
app/schemes/: device_info.py  refresh_token.py
charts_service/: .env.dev.example  pyproject.toml
tests/: conftest.py  factories.py  helpers.py
(+107 files in other folders)
