[tool.ruff]
exclude = [
    "app/alembic",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "tests/",
]

[tool.uv.workspace]
members = ["charts_service"]

[project]
name = "personal-finance"
version = "0.1.0"
description = "FastAPI application for personal finances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "alembic>=1.14.1",
    "bcrypt>=4.2.1",
    "factory-boy>=3.3.3",
    "fastapi[standard]>=0.115.6",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.4",
    "pydantic-settings>=2.7.1",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.37",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.3.241126",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "ruff>=0.9.2",
]
